--- a/index.html
+++ b/index.html
@@ -2,11 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Daniel Yoder</title>
 </head>
 <body>
+  <h1 id="banner">Student Bio</h1>
+  <section>
+    <h2 id="student name">Daniel Yoder</h2>
+      <iframe src="https://giphy.com/embed/tEsPVINETtZpS" width="200" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/back-to-the-future-tEsPVINETtZpS">via GIPHY</a></p>
+      <p>Hi internet, I'm Dan. I am from the year 1982, in the month of July, on the 21st day.</p>
+      <p>
+        I am from Corbett, Oregon; a very small town east of Portland. Fun fact: I graduated High School with the same 50 kids I went to Pre School with.
+      </p>
+      <p>I consider myself a "Jack of all trades.." and unfortunately what goes with that is "..but a master of none"</p>
+  </section>
 
 </body>
 <footer>
-
+  <h2>Contact Info</h2>
+    <ul>
+      <li><strong>Email: </strong><a href="mailto: dyoder838@gmail.com" target="_blank">dyoder838@gmail.com</a></li>
+      <li><strong>GitHub: </strong><a href=https://dyoder838.github.io/basic-student-bio-djy/. target="_blank">Dyoder838</a></li>
+<li><strong>Portfolio: </strong><a href="" target="_blank">under construction</a></li>
+    </ul>
 </footer>
 </html>
