--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel Yoder</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1 id="banner">Student Bio</h1>
-  <section>
+  <section class= "section1">
     <h2 id="student name">Daniel Yoder</h2>
-      <iframe src="https://giphy.com/embed/tEsPVINETtZpS" width="200" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/back-to-the-future-tEsPVINETtZpS">via GIPHY</a></p>
+      <!-- <iframe src="https://giphy.com/embed/tEsPVINETtZpS" width="200" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/back-to-the-future-tEsPVINETtZpS">via GIPHY</a></p> -->
+      <img src=https://lh3.googleusercontent.com/6hL4ZWOf66xepi2997kJy4FltUkoLPQrGewT1sz4Xrecs03pgRZGLfiM8gFUjYewU4T_-_eEtyVq32XbHKEEwLlT_MXB0SQwLMzNFPF9IzWlzKm02f3wHwvbONr5jEEcgrCBN48L9cEX4bFCjpr4VnexqTnT5sII28RqTGq1M7VLRru2vfPqBbrxCBimUDiZSRM3RmBUxN2Y-5wHIHlJQBZDqHgp-XIqCtnFcwz6uVsbe5kcKuUVfudHR4aGMffdBnduAIP6SAzoSo3JBNl4CBT5tQGsX250LXswkj-SZ-rhx3aYBSNFqr59EMD6FdBG1NyPnmRBbOoTdaqSQa2rQDn5_LnYTS982FFPRvnHYfyz8O64vgiMM0p_I8x7bCAvUhJ3csG9pZEGsbVojvO6cR78nn-F_ED-hI_VDyREX_Rmroz1H8ADME55ZQw6oJKlSJDmn0xWHGLmNWCn3Ne20qBNkQgfkZWeuFOb8DaeElZO3TzxpDsu0AF1Bljm6nug7pJOJrkhu3l8JK1fJ8TTSOCGkrKZH1EtoeoI-FLMvDgXwEKXnZrpQj2IroOiTkVKWSPDfS2QxjahH4VKrIohG3z-DJdFlAGkjYMUXrsKAPUdoZau7TCV6UddRSHb1lc7x5dRFLCXLyrJJ2KnwZrjvvjgytAMYaAdahEiPMCyBdD2LXTfesR25aDNk19lbQ=w681-h79-no?authuser=0>
       <p>Hi internet, I'm Dan. I am from the year 1982, in the month of July, on the 21st day.</p>
       <p>
         I am from Corbett, Oregon; a very small town east of Portland. Fun fact: I graduated High School with the same 50 kids I went to Pre School with.
